# AIChat

./: AIChat.py  AIChat1.py.old  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  setup.py  tester.py
AIChat/: __init__.py
MyAIPackage/: AIChat.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/aichat/: __init__.py
tests/: character_prompt.txt  test_aichat.py
