[tool.poetry]
name = "aichat"
version = "0.0.1"
description = "framework for makeing chat with any LLM system"
authors = ["Elon Ezra"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
